Consolidate to HA add-on: point docker-compose to water-importer and remove standalone folder

--- a/water-importer/Dockerfile
+++ b/water-importer/Dockerfile
@@ -1,10 +1,14 @@
 ARG BUILD_FROM=homeassistant/aarch64-base:latest
 FROM $BUILD_FROM
 
-# Install dependencies
+# Install dependencies and build tools (needed for some Python packages)
 RUN apk add --no-cache \
     python3 \
-    py3-pip
+    py3-pip \
+    build-base \
+    libffi-dev \
+    openssl-dev \
+    python3-dev
 
 # Set working directory
 WORKDIR /app
@@ -15,8 +19,9 @@ COPY rootfs/app/ /app/
 # Copy startup script
 COPY rootfs/run.sh /
 
-# Install Python requirements
-RUN pip install --no-cache-dir -r requirements.txt && \
+# Install Python requirements (use python -m pip and allow system-package installs)
+RUN python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    python3 -m pip install --no-cache-dir --disable-pip-version-check --break-system-packages -r requirements.txt && \
     chmod +x /run.sh
 
 # Create non-root user
